[metadata]
name = casambi-bt
version = 0.0.4
author = lkempf
author_email = pypi@lukas-kempf.de
description = A minimal, unofficial implementation of a bluetooth client for casambi devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lkempf/casambi-bt
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    bleak>=0.19
    cryptography>=3
    httpx>=0.17
    bleak_retry_connector >= 2.8.5

[options.packages.find]
where = src
