[metadata]
name = casambi-bt
version = 0.3.0.dev1
author = lkempf
author_email = pypi@lukas-kempf.de
description = A minimal, unofficial implementation of a bluetooth client for casambi devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lkempf/casambi-bt
classifiers =
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    bleak>=0.22
    cryptography>=40.0.0
    httpx>=0.25
    bleak_retry_connector >= 3.6.0
    aiopath==0.7.*

[options.packages.find]
where = src
