[metadata]
name = casambi-bt-revamped
version = 0.3.2.dev2
author = rankjie
author_email = rankjie@gmail.com
description = Enhanced Casambi Bluetooth client library with switch event support
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rankjie/casambi-bt
classifiers =
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    bleak>=0.22
    bleak-esphome>=3.0.0,<4.0.0
    cryptography>=40.0.0
    httpx>=0.25
    bleak_retry_connector >= 3.6.0
    aiopath==0.7.*

[options.packages.find]
where = src
